--- a/Datos/Datos.vbproj
+++ b/Datos/Datos.vbproj
@@ -68,7 +68,12 @@
     <Compile Include="BodegaDAL.vb" />
     <Compile Include="CajaDAL.vb" />
     <Compile Include="CajaRackDAL.vb" />
+    <Compile Include="conexion.vb" />
+    <Compile Include="DatosBusquedaDAL.vb" />
+    <Compile Include="DepartamentosDAL.vb" />
     <Compile Include="DocBindingDAL.vb" />
+    <Compile Include="DocumentosDAL.vb" />
+    <Compile Include="ImagenesDAL.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -84,8 +89,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="PlantillasDAL.vb" />
     <Compile Include="RackBodegaDAL.vb" />
     <Compile Include="RackDAL.vb" />
+    <Compile Include="TipoDocDAL.vb" />
     <Compile Include="User_ModDAL.vb" />
     <Compile Include="UsuarioDAL.vb" />
   </ItemGroup>
