--- a/SGDoc/Presentacion.vbproj
+++ b/SGDoc/Presentacion.vbproj
@@ -93,6 +93,18 @@
     <Compile Include="CrearRack.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="doc.designer.vb">
+      <DependentUpon>doc.vb</DependentUpon>
+    </Compile>
+    <Compile Include="doc.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ImpImagen.designer.vb">
+      <DependentUpon>ImpImagen.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ImpImagen.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="InsertBC.designer.vb">
       <DependentUpon>InsertBC.vb</DependentUpon>
     </Compile>
@@ -157,6 +169,12 @@
     <Compile Include="Usuarios.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="VerDoc.designer.vb">
+      <DependentUpon>VerDoc.vb</DependentUpon>
+    </Compile>
+    <Compile Include="VerDoc.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="CrearBinding.resx">
@@ -170,6 +188,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CrearRack.resx">
       <DependentUpon>CrearRack.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="doc.resx">
+      <DependentUpon>doc.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ImpImagen.resx">
+      <DependentUpon>ImpImagen.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="InsertBC.resx">
       <DependentUpon>InsertBC.vb</DependentUpon>
@@ -200,6 +224,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Usuarios.resx">
       <DependentUpon>Usuarios.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VerDoc.resx">
+      <DependentUpon>VerDoc.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
